docs/_sources/autoapi/langstring_lib/tests/tests_multilangstring/test_multilangstring_repr/index.rst.txt
:py:mod:`langstring_lib.tests.tests_multilangstring.test_multilangstring_repr`
==============================================================================

.. py:module:: langstring_lib.tests.tests_multilangstring.test_multilangstring_repr


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_basic_representation
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_with_preferred_lang
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_empty_multilangstring
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_with_control
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_invalid_langstrings_type
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_invalid_control_value
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_invalid_preferred_lang_type
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_long_value
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_special_characters
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_unicode_characters
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_empty_langstring
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_invalid_language_code
   langstring_lib.tests.tests_multilangstring.test_multilangstring_repr.test_repr_multiple_langstrings



.. py:function:: test_repr_basic_representation()

   Check the representation of a standard MultiLangString with multiple languages.


.. py:function:: test_repr_with_preferred_lang()

   Check the representation when a preferred language is set.


.. py:function:: test_repr_empty_multilangstring()

   Check the representation of a MultiLangString with no LangStrings.


.. py:function:: test_repr_with_control()

   Check the representation when a specific control flag is set.


.. py:function:: test_repr_invalid_langstrings_type()

   Ensure a TypeError is raised if the provided langstrings are not in dictionary format.


.. py:function:: test_repr_invalid_control_value()

   Ensure a ValueError is raised if an unrecognized control value is provided.


.. py:function:: test_repr_invalid_preferred_lang_type()

   Ensure a TypeError is raised if preferred_lang is not a string.


.. py:function:: test_repr_long_value()

   Check the representation of a MultiLangString with a long string value.


.. py:function:: test_repr_special_characters()

   Check the representation of a MultiLangString with special characters.


.. py:function:: test_repr_unicode_characters()

   Check the representation of a MultiLangString containing Unicode characters.


.. py:function:: test_repr_empty_langstring()

   Check the representation of a MultiLangString with an empty LangString.


.. py:function:: test_repr_invalid_language_code()

   Ensure a ValueError is raised for invalid language codes.


.. py:function:: test_repr_multiple_langstrings()

   Check the representation of a MultiLangString with a large number of LangStrings.


